# job-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_expand_job_listing_metadata.py  0003_add_detail_json.py  0004_make_match_query_optional.py  0005_auth_conversations.py  0006_add_search_query_public_id.py  0007_add_conversation_public_id.py
app/: config.py  db.py  events.py  main.py  models.py  schemas.py
app/ai/: embeddings.py  fake_llm.py  fallback.py  gemini.py  llm.py  matcher.py  prompts.py  qwen.py
app/api/: auth.py  conversations.py  cv.py  deps.py  health.py  history.py  jobs.py  search.py
app/scrapers/: base.py  common.py  glints.py  glints_auth.py  glints_login.py  glints_normalize.py  linkedin.py  linkedin_auth.py  linkedin_login.py  linkedin_normalize.py  linkedin_voyager.py  linkedin_voyager_normalize.py  orchestrator.py
app/services/: auth_service.py  cache_service.py  conversation_service.py  cover_letter_service.py  cv_service.py  job_detail_service.py  match_service.py  relevance_filter.py  search_intent.py  search_service.py
app/utils/: hashing.py  logger.py  pdf.py
app/ws/: search.py
tests/: conftest.py  test_config_linkedin.py
tests/fixtures/: glints_job_detail.json  glints_next_data.json  glints_response.json  glints_response_graphql.json  glints_response_v2.json  linkedin_detail.html  linkedin_listing.html  linkedin_voyager_detail.json  linkedin_voyager_detail_rich.json  linkedin_voyager_search.json
tests/integration/: test_auth_conversations.py  test_cache_service.py  test_cover_letter.py  test_cv_service.py  test_e2e_search.py  test_search_pipeline.py
tests/scraper/: test_glints.py  test_glints_auth.py  test_glints_live.py  test_linkedin.py  test_linkedin_auth.py  test_linkedin_live.py  test_linkedin_login.py  test_linkedin_voyager.py  test_linkedin_voyager_normalize.py  test_orchestrator_linkedin_auth.py
tests/unit/: test_config.py  test_embeddings.py  test_events.py  test_fake_llm.py  test_glints_normalize.py  test_hashing.py  test_humanizer.py  test_jd_extraction.py  test_job_detail_service.py  test_linkedin_normalize.py  test_llm_fallback.py  test_logger.py  test_matcher.py  test_orchestrator.py  test_pdf.py  test_qwen.py  test_relevance_filter.py  test_schemas.py  test_search_intent.py
